GKE/assets/kustomize/public-api/base/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: public-api
  # namespace: public

spec:
  # replicas: 0

  # selector:
  #   matchLabels:
  #     app: public-api
  template:
    metadata:
      name: public-api
      # labels:
      #   app: public-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: public-api
        image: KUSTOMIZE-DEFINED
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
          name: public-api
        resources:
          limits:
            cpu: 20m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 50Mi
