GKE/assets/kustomize/public-api/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: public-api
  # namespace: public

spec:
  # type: ClusterIP
  ports:
  - name: public-api
    protocol: TCP
    port: 3000
    targetPort: 3000

  # selector:
  #   app: public-api
