GKE/assets/kustomize/public-api/base/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api
  # namespace: public
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"

    # acme.cert-manager.io/http01-edit-in-place: "true"
    # patch: kubernetes.io/ingress.global-static-ip-name: "api-static-ip"

    # tls: cert-manager.io/cluster-issuer: letsencrypt-prod
    # redirect: networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https

spec:
  tls:
    - secretName: ssl
      hosts:
        - KUSTOMIZE-DEFINED
  rules:
    - host: KUSTOMIZE-DEFINED
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-api
                port:
                  number: 3000
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: public-api
                port:
                  number: 3000
